# Python-for-Data-Science-

Python-0-Starting/ex00/: Hello.py
Python-0-Starting/ex01/: format_ft_time.py
Python-0-Starting/ex02/: find_ft_type.py
Python-0-Starting/ex03/: NULL_not_found.py
Python-0-Starting/ex04/: whatis.py
Python-0-Starting/ex05/: building.py
Python-0-Starting/ex06/: filterstring.py  ft_filter.py
Python-0-Starting/ex07/: sos.py
Python-0-Starting/ex08/: Loading.py
Python-0-Starting/ex09/: LICENSE  README.md  pyproject.toml
Python-1-Array/: requirements.txt
Python-1-Array/ex00/: give_bmi.py
Python-1-Array/ex01/: array2D.py
Python-1-Array/ex02/: load_image.py
Python-1-Array/ex03/: load_image.py  zoom.py
Python-1-Array/ex04/: load_image.py  rotate.py
Python-1-Array/ex05/: load_image.py  pimp_image.py
Python-2-DataTable/: requirements.txt
Python-2-DataTable/ex01/: aff_life.py  load_csv.py
Python-2-DataTable/ex02/: aff_pop.py  load_csv.py
Python-2-DataTable/ex03/: projection_life.py
Python-3-OOP/ex00/: S1E9.py
Python-3-OOP/ex01/: S1E7.py
Python-3-OOP/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
Python-3-OOP/ex03/: ft_calculator.py
Python-3-OOP/ex04/: ft_calculator.py
