[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
authors = [{name="CodeS42", email="CodeS42@42.fr"}]
description = "A sample test package"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"